# solana_project

./: README.md  docker-compose.yaml  run_project.py
influxdb/: influxdb.conf
rust_backend/: Cargo.toml  dockerfile
rust_backend/src/: main.rs
streamlit_dashboard/: dashboard.py  dockerfile  requirements.txt
